<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dialog_width"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </TableRow>

    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_content"
            android:textSize="20sp"
            android:gravity="center"/>
        <TextView
            android:paddingLeft="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textSize="20sp" />
        <TextView
            android:paddingLeft="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/design"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>