<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="350dp"
    android:layout_gravity="center">

    <RelativeLayout
        android:id="@+id/call_frame"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/atp__activity_player_layout_help_call_audience_background">

        <LinearLayout
            android:id="@+id/layout_call_above"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="2">
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:weightSum="2">

                <TextView
                    android:id="@+id/call_grandpa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/grandpa"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/atp__activity_player_layout_help_call_01_active" />

                <TextView
                    android:id="@+id/call_grandma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/grandma"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/atp__activity_player_layout_help_call_02_active" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:weightSum="2">

                <TextView
                    android:id="@+id/call_pa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/pa"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/atp__activity_player_layout_help_call_03_active" />

                <TextView
                    android:id="@+id/call_ma"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ma"
                    android:textColor="@color/white"
                    app:drawableTopCompat="@drawable/atp__activity_player_layout_help_call_04_active" />
            </TableRow>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:id="@+id/layout_call_below"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp"
            android:weightSum="5">

            <TextView
                android:id="@+id/image_person_help"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/grandpa"
                android:textColor="@color/white"
                app:drawableTopCompat="@drawable/atp__activity_player_layout_help_call_01_active" />

            <TextView
                android:id="@+id/advise_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_call_ok"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@drawable/button_confirm_audience"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:text="@string/ok"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/call_frame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-20dp"
        android:background="@drawable/atp__activity_player_layout_help_call_title_background"
        android:gravity="center"
        android:text="@string/title_call_help"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>